# ComfyUI-RGBYP-Mask-Editor

./: README.md  __init__.py  pyproject.toml
js/: AddSpacer.js  RGBYPLoadImage.js  RGBYPLoadImage.js.bak  RGBYPLoadImage.js.bak2  RGBYPLoadImage.js.bak3  RGBYPMaskBridgeRedraw.js  RGBYPMaskEditor.js  RGBYPMaskEditor_io.js  RGBYPMaskEditor_keys.js  RGBYPMaskEditor_ui.js  debug.js
nodes/: LoadImageWithFileData.py  MaskGrowBlur.py  RGBYPDenoiseSettings.py  RGBYPDenoiseSettingsOut.py  RGBYPLoadImage.py  RGBYPMaskBridge.py  RGBYPMaskCompositeWithStrength.py  RGBYPMaskStrength.py  RGBYPMaskStrengthOut.py  RGBYPMaskToList.py  RGBYPMaskToRegularMasks.py  RGBYPSaveMask.py  SEGSSort.py
